working on save api

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="share-popup">
-		<p id="share-popup-message">share_message</p>
+		<p id="share-popup-message"></p>
 	</div>
 </body>
 </html>
