working on new api

--- a/src/options_custom/options_custom.html
+++ b/src/options_custom/options_custom.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 	<form action="#" method="POST" id="app-form" class="app-form">
-		<label id="app-token-label" for="app-token"></label>
-		<input id="app-token" name="app-token" type="text" value="">
-		<button id="app-token-button"></button>
+		<label id="app-data-label" for="app-data"></label>
+		<input id="app-data" name="app-data" type="text" value="">
+		<button id="app-data-button"></button>
 		<div id="app-form-status"></div>
 	</form>
 </body>
