working with new api

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -7,8 +7,8 @@
 	<script src="./browser_action.js"></script>
 </head>
 <body>
-	<div id="share-popup">
-		<p id="share-popup-message"></p>
+	<div id="app-popup" class="app-popup">
+		<div id="app-popup-message"></div>
 	</div>
 </body>
 </html>
